@@ -272,6 +272,9 @@ class AgendaItemsView(BrowserView):
             if item.is_revise_possible():
                 data['revise_link'] = meeting.get_url(
                     view='agenda_items/{}/revise'.format(item.agenda_item_id))
+            if self.is_manager():
+                data['debug_excerpt_docxcompose_link'] = meeting.get_url(
+                    view='agenda_items/{}/debug_excerpt_docxcompose'.format(item.agenda_item_id))
             if item.is_paragraph:
                 data['paragraph'] = True
 
@@ -550,8 +553,11 @@ class AgendaItemsView(BrowserView):
                 return doc
         return None
 
+    def is_manager(self):
+        return api.user.has_permission('cmf.ManagePortal')
+
     def debug_excerpt_docxcompose(self):
-        if not api.user.has_permission('cmf.ManagePortal'):
+        if not self.is_manager():
             raise Forbidden
 
         if self.agenda_item.is_paragraph:
